finish modify page